<resources>
    <string name="app_name">Qualtum RSS Reader</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>

    <string name="loginButton">Login</string>
    <string name="rememberCheckbox">Stay Logged In</string>
    <string name="newAccountButton">Create New Account</string>

    <string name="regUsernameLabel">Username:</string>
    <string name="regEmailLabel">Email:</string>
    <string name="regPasswordLabel">Password:</string>
    <string name="regConfirmPasswordLabel">Confirm Password:</string>

    <string name="registerButton">Create Account</string>

    <string name="addRss">Enter RSS Feed URL:</string>
    <string name="addFeedButton">Add RSS Feed</string>

    <string name="action_settings">Settings</string>
</resources>
